maven-surefire-plugin -XX:MaxPermSize=1024m