@@ -86,6 +86,14 @@
 					<name>${wildfly.deployment.name}</name>
 				</configuration>
 			</plugin>
+			<!-- overwrite parent config to change JVM options -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>-XX:MaxPermSize=1024m</argLine>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
